fixing gettask by status